[package]
name = "mitm"
version = "0.1.0"
authors = ["ixaxaar <root@ixaxaar.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap                = { version = "2.33.3", features = ["yaml"] }
colored             = "2.0.0"
termcolor           = "1.1.2"
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
serde_yaml          = "0.8"
rustls-native-certs = "0.5"
openssl             = "0.10"
openssl-sys         = "0.9"
hyper               = { version = "0.14", features = ["full"] }
tokio               = { version = "1", features = ["full"] }
