[package]
name = "mitm"
version = "0.1.0"
authors = ["ixaxaar <root@ixaxaar.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap                = { version = "2.33.3", features = ["yaml"] }
# Serde
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
serde_yaml          = "0.8"
# Network
hyper               = { version = "0.14", features = ["full"] }
tokio               = { version = "1", features = ["full"] }
# TLS
openssl             = "0.10"
openssl-sys         = "0.9"
rustls              = "0.19"
rustls-native-certs = "0.5"
hyper-tls           = "0.5"
hyper-rustls        = "0.22"
tokio-rustls        = "0.22"
tokio-native-tls    = "0.3"
# Utils
futures-util        = "0.3"
lazy_static         = "1.4"
bytes               = "1.0"
lru-cache           = "0.1"
colored             = "2.0.0"
termcolor           = "1.1.2"

[patch.crates-io]
"hyper" = { path = "./lib/hyper" }

# "hyper" = { git = "https://github.com/SetuHQ/hyper-mitm", branch = "mitm" }
