[package]
name = "mitm"
version = "0.1.0"
authors = ["ixaxaar <root@ixaxaar.in>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "MITM-enabled auditing proxy server for outbound traffic."
readme = "README.md"
homepage = "https://github.com/SetuHQ/mitm.rs"
repository = "https://github.com/SetuHQ/mitm.rs"
keywords = ["cli", "mitm", "proxy"]
categories = ["command-line-utilities"]

[dependencies]
clap                = { version = "2.33.3", features = ["yaml"] }
# Serde
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
serde_yaml          = "0.8"
base64              = "0.13"
# Network
hyper               = { version = "0.14", features = ["full"] }
tokio               = { version = "1", features = ["full"] }
# TLS
openssl             = "0.10"
openssl-sys         = "0.9"
rustls              = "0.19"
rustls-native-certs = "0.5"
hyper-tls           = "0.5"
hyper-rustls        = "0.22"
tokio-rustls        = "0.22"
tokio-native-tls    = "0.3"
# Utils
futures             = "0.3"
futures-util        = "0.3"
lazy_static         = "1.4"
bytes               = "1.0"
lru-cache           = "0.1"
colored             = "2.0.0"
termcolor           = "1.1.2"

[patch.crates-io]
"hyper" = { path = "./lib/hyper" }
